feat: 前端页面写操作补齐 + 后端服务增强 + 测试补全（Stage 10）
- 前端：生产订单、退货、采购订单、ASN、BOM/MRP、发货、库存、数据权限等页面补齐写操作与流转入口
- 后端：库存查询增强、发货服务扩展、ASN 领域服务重构、报表 SQL 优化
- 测试：新增 InventoryQuery、PlaceholderInventoryChange、Shipment 等单测
- 文档：API 接口文档、进度文档同步更新

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>